[project]
name = "toxic-reviews-detector"
version = "0.1.0"
description = "The simple NLP exercise"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.9",
    "nltk>=3.9.4",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pymorphy2>=0.9.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "transformers>=5.6.2",
]
